# latch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  latch-article.docx  latch-devto-launch-article.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: chaos_benchmark.py
docs/: index.html
examples/: basic_example.py  langchain_adapter_example.py  naive_agent_example.py  openai_adapter_example.py  openai_example.py  resilient_agent_example.py  resilient_tool_example.py  saga_example.py
src/latch/: __init__.py  budget.py  chaos.py  circuit_breaker.py  core.py  exceptions.py  saga.py  timeout.py  tracing.py
src/latch/adapters/: __init__.py  langchain.py  openai.py
src/latch/stores/: __init__.py  base.py  memory.py  redis.py
tests/: test_adapters.py  test_budget.py  test_chaos.py  test_circuit_breaker.py  test_core.py  test_redis_store.py  test_saga.py  test_stores_memory.py  test_timeout.py  test_tracing.py  test_tracing_integration.py
