[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latch-idempotent"
version = "0.4.1"
description = "Reliability middleware for LLM agent tool calls — idempotency, circuit breaking, timeouts, budget guardrails, saga/compensation, tracing, and chaos testing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Venkata Sangaraju" }]
keywords = ["llm", "agents", "idempotency", "reliability", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "fakeredis>=2.20",
    "langchain-core>=0.3",
]

[project.urls]
Homepage = "https://github.com/sangaraju1988/latch"
Issues = "https://github.com/sangaraju1988/latch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.10"
strict = true
